--- a/charts/tenant/templates/ghost.yaml
+++ b/charts/tenant/templates/ghost.yaml
@@ -6,7 +6,7 @@ metadata:
   name: ghost-{{ $tenant }}
   namespace: demo
   annotations:
-    flux.weave.works/automated: "false"
+    flux.weave.works/automated: "true"
     flux.weave.works/tag.chart-image: glob:1.21.*
 spec:
   releaseName: ghost-{{ $tenant }}
